# goit-pythonweb-hw-12

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.dev.override.yml  compose.prod.local.override.yml  compose.yaml  entrypoint.sh  makefile  pyproject.toml
assets/manual_tests/results/: auth_test_plan.md  contacts_test_plan.md  env_setup_test_plan.md  me_test_plan.md  users_test_plan.md
assets/manual_tests/test_files/: wrong_mime_type.odt
init/pgadmin/: Readme.md  pgadmin_custom_entrypoint.sh  servers.json  servers.template.json
init/postgres/: Readme.md  init.sh  init.template.sql
migrations/: env.py
migrations/versions/: 0378c40d374e_init.py  107658b8bbee_make_username_case_insensitive_but_.py  11a8e77b2534_add_is_active_field_to_users.py  1480976f99ca_add_role_to_users.py  186f90aef183_add_auth_user.py  92e907d3c909_fix_entities_timestamps_generation_in_db.py  9660a1d978dd_make_email_case_insensitive_and_stored_.py  ab8d77801a66_add_email_confirmation_field_to_user.py  dec2723a1e65_remove_is_active_field_from_users_after_.py
src/: __main__.py  main.py
src/config/: __init__.py  app_config.py
src/db/: __init__.py  session_manager.py
src/providers/: __init__.py  avatar_provider.py  cloud_provider.py  mail_provider.py
src/seed/: seed_init_superuser.py
src/services/: __init__.py  auth_service.py  contact_service.py  file_service.py  mail_service.py  user_service.py
src/templates/: registration_welcome_email.html
src/utils/: constants.py  date_helpers.py  hash_utils.py  logger.py  orm_helpers.py  query_helpers.py
(+79 files in other folders)
